# conan_transient_linkage

./: README.md  build.sh
lib_a/: conanfile.py
lib_a/src/: CMakeLists.txt
lib_a/src/include/lib_a/: lib_a.h
lib_a/src/src/: lib_a.cpp
lib_a/src/tests/: CMakeLists.txt  lib_a_test.cpp
lib_a/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
lib_b/: conanfile.py
lib_b/src/: CMakeLists.txt
lib_b/src/include/lib_b/: lib_b.h
lib_b/src/src/: lib_b.cpp
lib_b/src/tests/: CMakeLists.txt  lib_b_test.cpp
lib_b/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
lib_c/: CMakeLists.txt  conanfile.py
lib_c/src/: CMakeLists.txt
lib_c/src/include/lib_c/: lib_c.h
lib_c/src/src/: lib_c.cpp
lib_c/src/tests/: CMakeLists.txt  lib_c_test.cpp
lib_c/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
